--- a/test/less/ruleset-mixin.less
+++ b/test/less/ruleset-mixin.less
@@ -1,5 +1,5 @@
 
-// hmm, that may be pretty dangerous possible breaking existing code?
+// hmm, that may be pretty dangerous...
 
 .function() { 
     .foo {
