--- a/test/less/scope-precedence.less
+++ b/test/less/scope-precedence.less
@@ -8,9 +8,17 @@
     .function-foo() {
         return: @a;
     }
+    
+    .function-bar() {
+        return: @b;
+    }
 
     &-precedence {
         @a: caller;
         foo: foo();
+        @b: caller;
+        bar: bar();
     }
 }
+
+@a: last global;
