--- a/test/less/overloading.less
+++ b/test/less/overloading.less
@@ -1,24 +1,25 @@
 
-.function-foo(@a) {
-    return: foo @a;
+.function {
+    .foo(@a) {
+        return: foo @a;
+    }
+    
+    .foo(@a, @b) {
+        return: foo @a @b;
+    }
+    
+    .bar(@a, @b: none) {
+        return: bar @a @b;
+    }
+    
+    .bar(@a) {
+        return: bar @a;
+    }
+    
+    .bar(@a, 5) {
+        return: bar @a explicit-5;
+    }    
 }
-
-.function-foo(@a, @b) {
-    return: foo @a @b;
-}
-
-.function-bar(@a, @b: none) {
-    return: bar @a @b;
-}
-
-.function-bar(@a) {
-    return: bar @a;
-}
-
-.function-bar(@a, 5) {
-    return: bar @a explicit-5;
-}
-
 
 overloading {
     foo-1: foo(1);
