--- a/test/css/globals-only/misc.css
+++ b/test/css/globals-only/misc.css
@@ -3,5 +3,9 @@ misc {
   2: true;
   3: true;
   4: true;
-  5: #feafaf;
+  5: red, 1.2 3px 4%, 5 boo! identifier;
+  6: true;
+  7: true;
+  8: true;
+  9: #feafaf;
 }
