--- a/test/less/misc.less
+++ b/test/less/misc.less
@@ -50,9 +50,8 @@ misc {
 }
 
 misc-in-parameter {
-    // FIXME: not yet, see less/less.js#2574
-    // .in-parameter-rgba;
-    // .in-parameter-rgbb;
+    .in-parameter-rgba;
+    .in-parameter-rgbb;
 }
 
 // ............................................................
@@ -66,7 +65,7 @@ misc-in-parameter {
 }
 
 misc-in-guard {
-    // .in-guard; // FIXME: not yet, see less/less.js#2574
+    .in-guard;
 }
 
 
